// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeButton accept jsx as children 1`] = `
<span
  className="css-qlm1g8"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  <span>
    string
  </span>
</span>
`;

exports[`BadgeButton danger 1`] = `
<span
  className="css-udhfco"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  danger
</span>
`;

exports[`BadgeButton default 1`] = `
<span
  className="css-qlm1g8"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  default
</span>
`;

exports[`BadgeButton outline 1`] = `
<span
  className="css-1g3w5u4"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  outline
</span>
`;

exports[`BadgeButton primary 1`] = `
<span
  className="css-3nqox9"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  primary
</span>
`;

exports[`BadgeButton success 1`] = `
<span
  className="css-96htp3"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  success
</span>
`;

exports[`BadgeButton warning 1`] = `
<span
  className="css-1i0swvi"
  data-cy="badgeButton"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={-1}
>
  warning
</span>
`;
